--- a/www/index.html
+++ b/www/index.html
@@ -13,67 +13,56 @@
   <!-- Bootstrap and Css -->
   <link rel="stylesheet" href="components/loader.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css"> 
 </head>
-<body class="body">
+<body>
   <div class="container">
-    <div class="row">
+    <div class="row" id="cabecalho">
       <div class="col-12">
-        <center><h2><i class="far fa-id-card"></i> Cadastros de Cursos</h2></center>
-      </div>
-    </div>
-    <hr>
-    <div class="row">
-      <div class="col-12">
-        <div class="form-group">
-          <label for="">Consulte seu cadastro com seu ID:</label>
-          <input type="number" class="form-control" id="id">
-        </div>
-      </div>
-    </div>  
-    <div class="row">
-      <div class="col-12">
-        <div class="form-group">
-          <button class="btn btn-dark btn-block" id="buscar">Buscar</button>
-        </div>
-      </div>  
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <label for="">Nome:</label>
-        <input type="text" class="form-control" id="nome">
+        <center><h4>Login</h4></center>
       </div>
     </div>
     <div class="row">
-      <div class="col-12">
-        <label for="">Curso:</label>
-        <input type="text" class="form-control" id="curso">
+      <div class="col-12" id="logotipo">
+        <img src='css/logo.png' id="logo">
       </div>
     </div>
-    <br>
-    <div class="row">
-      <div class="col-12">
-        <div class="form-group">
-          <button class="btn btn-success btn-block" id="cadastrar">Cadastrar</button>
+    <div class="form-group">
+      <div class="row">
+        <div class="col-12">
+          <label for="">Digite seu login:</label>
+          <div class="input-group mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text b"><i class="fas fa-user-circle a"></i></span>
+            </div>
+            <input type="text" class="form-control" id="login" placeholder="Login">
+          </div>
         </div>
-      </div>  
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <div class="form-group">
-          <button class="btn btn-warning btn-block" id="alterar">Alterar</button>
+      </div>         
+      <div class="row">
+        <div class="col-12">
+          <label for="">Digite sua senha:</label>
+          <div class="input-group mb-3">            
+            <div class="input-group-prepend">
+              <span class="input-group-text b"><i class="fas fa-key a"></i></span>
+            </div>            
+            <input type="password" class="form-control" id="senha" placeholder="Senha">
+            <div class="col-8 offset-5"><button class="btn btn-secundary" id="esqueceuSenha"><u>Esqueceu sua senha?</u></button></div>
+          </div>
         </div>
-      </div>  
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <div class="form-group">
-          <button class="btn btn-danger btn-block" id="deletar">Deletar</button>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <button class="btn btn-info btn-block" id="entrar">Entrar</button>
         </div>
-      </div>  
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-12">
+          <button class="btn btn-outline-info btn-block" id="novaConta">Crie uma nova conta</button>
+        </div>
+      </div>
     </div>
   </div>
 </body>
-</html>
